# 1.5x

## Broken change

A scale parameter is added in loadEffect's arguments. 